Enhance Douban sync, poster handling, and progress UI
Refactors Douban crawler to improve error handling, poster downloading, and progress reporting. Adds streaming progress updates to the Douban update API and updates the frontend to display progress bars for both Douban and IMDb updates. Improves year selection logic, normalizes movie IDs, and enhances robustness for local data loading. Also adds a favicon and updates poster serving to support multiple image formats.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Movie Championship"
     />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <title>Movie Championship</title>
   </head>
   <body>
